# improved-tribble

./: CMakeLists.txt  zadanie.txt
shaders/: bezier_fragment.glsl  bezier_tcs.glsl  bezier_tes.glsl  bezier_vertex.glsl  fragment.glsl
src/: main.cpp
